--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,19 +8,19 @@
 <body>
 <header>My Page</header>
 
-<section>
+<section class="pur">
 <div class="pink">Microsoft</div>
 <div>
 Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. How the sections are laid out on the screen depends on the width of the browser window. (Hint: use media queries discussed in Lecture 23.)
 </div>
 </section>
-<section>
+<section class="pur">
 <div class="blue">Apple</div>
 <div>
 Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. How the sections are laid out on the screen depends on the width of the browser window. (Hint: use media queries discussed in Lecture 23.)
 </div>
 </section>
-<section>
+<section class="pur">
 <div class="yellow">IBM</div>
 <div>
 Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. How the sections are laid out on the screen depends on the width of the browser window. (Hint: use media queries discussed in Lecture 23.)
