--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -20,7 +20,7 @@ Your site is very simple. It consists of a page heading and 3 sections (all in o
 Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. How the sections are laid out on the screen depends on the width of the browser window. (Hint: use media queries discussed in Lecture 23.)
 </div>
 </section>
-<section class="pur">
+<section class="pur  cow1">
 <div class="yellow">IBM</div>
 <div>
 Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. How the sections are laid out on the screen depends on the width of the browser window. (Hint: use media queries discussed in Lecture 23.)
